2004-02-27    <drew@loki.sai.local>

	* SkunkWeb/sw.conf.in: added documentation of dontCacheSource,
	noTagDebug and runOutOfCache options

	* SkunkWeb/util/precompile.py.in: now can compile individual files
	and also deletes the cache file before compiling (otherwise if the
	timestamp isn't newer, it wouldn't recompile)

2004-02-26    <drew@loki.sai.local>

	* pylibs/SkunkExcept.py (SkunkSyntaxError.format): fix so that
	doing things like <:args `foo`:> don't totally bomb, but you get a
	reasonble error.

2004-02-23  Drew Csillag  <drew@loki.sai.local>

	* pylibs/AE/Executables.py (PythonExecutable.run): made so raising
	DTHaltError works within python components

2004-02-16  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyDO/PyDO2.py (_pydobase): setting default value of the
	mutable property to be 1, as in the original PyDO.

2004-02-10  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/AE/CacheTag.py (CacheTag.genCode): remove incorrect
	generated code that referred to __h.TimeUtil.

2004-02-05  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* SkunkWeb/SkunkWeb/Server.py (_aPrefixIn): typo fix that caused 
	errors every request for people using userModuleCleanup

2004-01-20  Brian Olsen  <brian@qinternet.com>

	* pylibs/PyDO/PyDO.py "order" for get...() methods can accept a
	string or tuple of strings and tuples. Each tuple in the tuple must
	contain two values, the column name and "ASC" or "DESC".

	* pylibs/PyDO/PyDO2.py Same feature addition as in PyDO.py.

2004-01-15  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* pylibs/AE/Cache.py (_mcCompileFunc): fix for Windows line
	returns and message catalogs (as is already done for templates and
	python code).

2004-01-12  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* pylibs/skunk/date/format.py (HTTPDate): adding (replacing
	equivalent function in Date module).

2004-01-10  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* SkunkWeb/Services/templating/Handler.py: bug fix: now hide .inc